board no longer shifts around when markers are placed

--- a/index.css
+++ b/index.css
@@ -48,4 +48,6 @@ span {
     font-size: 50px;
     display: inline-block;
     text-align: center;
+    overflow: hidden;
+       
 }
